--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dataBinding {
-        enabled = true
+    // 뷰 바인딩
+    buildFeatures {
+        viewBinding true
     }
+
+    // 데이터 바인딩
+    buildFeatures {
+        dataBinding true
+    }
+
 }
 
 dependencies {
@@ -39,6 +46,10 @@ dependencies {
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
